fixed issue with overlapping footer

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,6 @@ body {
 
 .bcontainer {
   position: relative;
-  height: 80vh;
 }
 
 .bcontainer::before {
